<resources>
    <string name="app_name">TallerListview</string>
    <string name="opciones">OPCIONES</string>
    <string name="areas">ÁREAS</string>
    <string name="area">Área: </string>
    <string name="volumenes">VOLÚMENES</string>
    <string name="volumen">Volumen: </string>
    <string name="operaciones">OPERACIONES REALIZADAS</string>
    <string name="realizadas">REALIZADAS</string>
    <string name="operacion">Operación</string>
    <string name="datos">Datos</string>
    <string name="resultado">Resultado</string>
    <string-array name="opciones">
        <item>@string/areas</item>
        <item>@string/volumenes</item>
        <item>@string/operaciones</item>
    </string-array>
    <string name="cuadrado">Cuadrado</string>
    <string name="rectangulo">Rectángulo</string>
    <string name="circulo">Círculo</string>
    <string name="valorLado">Valor del Lado: </string>
    <string name="calcular">Calcular</string>
    <string name="borrar">Borrar</string>
    <string name="valorBase">Valor de la Base: </string>
    <string name="valorAltura">Valor de la Altura: </string>
    <string name="valorRadio">Valor del Radio: </string>
    <string-array name="opcAreas">
        <item>@string/cuadrado</item>
        <item>@string/rectangulo</item>
        <item>@string/circulo</item>
    </string-array>
    <string name="cilindro">Cilindro</string>
    <string name="cono">Cono</string>
    <string name="cubo">Cubo</string>
    <string-array name="opcVolumenes">
        <item>@string/cilindro</item>
        <item>@string/cono</item>
        <item>@string/cubo</item>
    </string-array>
    <string name="areaCirculo">Área del Circulo</string>
    <string name="areaCuadrado">Área del Cuadrado</string>
    <string name="areaRectangulo">Área del Rectangulo</string>
    <string name="lado">Lado: </string>
    <string name="radio">Radio: </string>
    <string name="altura">Altura: </string>
    <string name="base">Base: </string>
    <string name="volumenCilindro">Volumen del Cilindro</string>
    <string name="volumenCono">Volumen del Cono</string>
    <string name="volumenCubo">Volumen del Cubo</string>
    <string name="error_1">Ingresa un valor</string>
    <string name="error_2">Entrada invalida</string>
</resources>
